# clack

./: .gitignore  README.md  build_appimage.sh  build_deb.sh  docker-compose.yml  generate.py  generate_code.py  org.thiswasaryan.clack.desktop  pyproject.toml  raw_output.txt
Clack.AppDir/: .DirIcon  AppRun  clack.desktop
Clack.AppDir/usr/share/clack/evdev-1.9.3.dist-info/: RECORD
Clack.AppDir/usr/share/clack/gui/: __main__.py  listener.py  settings.py  shortcuts.py
Clack.AppDir/usr/share/clack/gui/docs/: GUI-ROADMAP.md  GUI-TECH-DEBT.md  IMPLEMENTATION-PROMPT.md
build_deb/DEBIAN/: control  postinst
build_deb/usr/share/applications/: clack.desktop
build_deb/usr/share/clack/gui/: SETUP.md  app.py  clack_runner.py  focus_watcher.py  presets.py  state.py  window.py
build_deb/usr/share/clack/gui/docs/: GUI-AGENT.md  GUI-ARCHITECTURE.md  GUI-DECISIONS.md
clack-cli/src/: main.rs
clack-core/src/: burst.rs  code.rs  correction.rs  error.rs  keyboard.rs  lib.rs  state.rs
gui/: __main__.py  app.py  injector.py  persistence.py  tooltips.py
packaging/arch/: PKGBUILD
packaging/debian/: control  rules
packaging/fedora/: clack-gui.spec
